// Copyright 2023 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto2";

package feedwire;

option optimize_for = LITE_RUNTIME;

enum TypeKind {
  TYPE_UNKNOWN = 0;
  TYPE_INT64 = 2;
  TYPE_UINT64 = 4;
}
